# IGVC_UI

./: CMakeLists.txt  README.md  config.json.example
IGVC_UI/: CMakeLists.txt  config.json  config.yaml  config.yaml.example  execbox.cpp  execbox.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  parameter.cpp  parameter.h  resources.qrc  spoiler.cpp  spoiler.h
src/: CMakeLists.txt  execbox.cpp  execbox.h  mainwindow.cpp  parameter.cpp  resources.qrc  spoiler.h
